--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,10 @@
         and their associated descriptions, such as terms and definitions, or questions and answers. Let\'s look at an example of a set of terms and definitionsIn HTML text fundamentals, we walked through how to mark up basic lists in HTML, but we didn\'t mention the third type of list you\'ll occasionally come across — description lists. The purpose of these lists is to mark up a set of items
         and their associated descriptions, such as terms and definitions, or questions and answers. Let\'s look at an example of a set of terms and definitionsIn HTML text fundamentals, we walked through how to mark up basic lists in HTML, but we didn\'t mention the third type of list you\'ll occasionally come across — description lists. The purpose of these lists is to mark up a set of items
         and their associated descriptions, such as terms and definitions, or questions and answers. Let\'s look at an example of a set of terms and definitions</string>
+    <string name="plus">+</string>
+    <string name="import_sound">Importez l\'audio : </string>
+    <string name="sound_name">Nom de l\'audio : </string>
+    <string name="sound_record">Enregistrez l\'audio : </string>
+    <string name="sound_time">Temps d\'audio maximum de 5 secondes : </string>
+    <string name="ok">OK</string>
 </resources>
