--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
         and their associated descriptions, such as terms and definitions, or questions and answers. Let\'s look at an example of a set of terms and definitionsIn HTML text fundamentals, we walked through how to mark up basic lists in HTML, but we didn\'t mention the third type of list you\'ll occasionally come across — description lists. The purpose of these lists is to mark up a set of items
         and their associated descriptions, such as terms and definitions, or questions and answers. Let\'s look at an example of a set of terms and definitionsIn HTML text fundamentals, we walked through how to mark up basic lists in HTML, but we didn\'t mention the third type of list you\'ll occasionally come across — description lists. The purpose of these lists is to mark up a set of items
         and their associated descriptions, such as terms and definitions, or questions and answers. Let\'s look at an example of a set of terms and definitions</string>
+    <string name="colorPick">Boutton pour choisir la couleur du théme</string>
+    <string name="addImage">Button pour choisir l image de fond</string>
+    <string name="colorPickTitle">Choisissez la couleur du thème</string>
+    <string name="button_parameter">Acceder parametre</string>
 </resources>
