Change le nom de projet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Projet</string>
+    <string name="app_name">YourTime</string>
     <string name="title_home">Accueil</string>
     <string name="title_stats">Historique</string>
     <string name="title_perso">Personalisation</string>
